# little_c_web_server

./: CMakeLists.txt  LICENSE  README.md  changelog.md  makefile  template.html
include/: common.h  list.h  meta.h  robust_io.h  utils.h
src/: list.c  main.c  meta.c  robust_io.c  utils.c
